# gradio-log

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/gradio_log/: __init__.py  log.py
backend/gradio_log/templates/component/: index.js  style.css
demo/: app.py  space.py
frontend/: Index.svelte  package-lock.json  package.json
